# polynomial-problem

./: Cargo.toml  LICENSE  README.md  head.toml  project.org
simulations/: head.toml
src/: main.rs
trs/binomial/: background  evaluate
trs/e1_compare_head_and_sum_of_tail1/: e1_compare_head_and_sum_of_tail1.evaluate  e1_compare_head_and_sum_of_tail1.generate  e1_compare_head_and_sum_of_tail1.signature  e1_compare_head_and_sum_of_tail1.templates  evaluate
trs/e1_const1/: background  e1_const1.evaluate  e1_const1.generate  e1_const1.signature  e1_const1.templates  evaluate  signature
trs/e1_count31/: e1_count31.evaluate  e1_count31.generate  e1_count31.signature  e1_count31.templates  evaluate  generate
trs/e1_cumsum1/: background  e1_cumsum1.evaluate  e1_cumsum1.generate  e1_cumsum1.signature  e1_cumsum1.templates  evaluate
trs/e1_deduplicate1/: e1_deduplicate1.evaluate  e1_deduplicate1.generate  e1_deduplicate1.signature  e1_deduplicate1.templates  evaluate
trs/e1_filter_even1/: e1_filter_even1.evaluate  e1_filter_even1.generate  e1_filter_even1.signature  e1_filter_even1.templates  evaluate
trs/e1_head1/: e1_head1.evaluate  e1_head1.generate  e1_head1.signature  e1_head1.templates  evaluate
trs/e1_increment1/: e1_increment1.evaluate  e1_increment1.generate  e1_increment1.signature  e1_increment1.templates  evaluate  signature
trs/e1_index_in_head1/: e1_index_in_head1.evaluate  e1_index_in_head1.generate  e1_index_in_head1.signature  e1_index_in_head1.templates  evaluate  generate
trs/e1_length1/: e1_length1.evaluate  e1_length1.generate  evaluate  (+2 more)
(+26 files in other folders)
