[package]
name = "list-routine-learning-rs"
version = "0.1.0"
authors = ["Josh Rule <joshua.s.rule@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshrule/list-routine-learning-rs"
homepage = "https://github.com/joshrule/list-routine-learning-rs"
description = "Rust simulations using input/output examples to learn typed first-order term rewriting systems that perform list routines."
keywords = ["term-rewriting", "hindley-milner", "learning", "program-induction", "lists"]
categories = ["science", "simulation"]

[dependencies]
polytype = "6.0"
programinduction = "=0.6.11"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
term_rewriting = "0.2"

[patch.crates-io]
programinduction = { path = "../program-induction" }
term_rewriting = { path = "../term-rewriting-rs" }
polytype = { path = "../polytype-rs" }
